--- a/static/css/base.module.css
+++ b/static/css/base.module.css
@@ -6,6 +6,21 @@ body {
   background-color: #06F;
   width: 100%;
   height: 150px;
+  padding: 2rem;
+  display: flex;
+  align-items: center;
+}
+
+.navbar-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 1rem;
+}
+
+.navbar-item {
+  color: #fff;
+  font-size: 1.25rem;
 }
 
 .main-container {
