--- a/static/css/post.module.css
+++ b/static/css/post.module.css
@@ -21,3 +21,19 @@
   color: #333;
   line-height: 1.5rem;
 }
+
+.actions-container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.edit {
+  cursor: pointer;
+  background-color: #06F;
+  width: max-content;
+  padding: 0.75rem 1.5rem;
+  border-radius: 4px;
+  color: #fff;
+  font-weight: 700;
+}
