--- a/templates/base.html
+++ b/templates/base.html
@@ -13,9 +13,14 @@
 <body>
   <header class="header-container">
     <nav class="navbar-container">
-      <a href="/posts" class="navbar-item">Posts</a>
-      <a href="/posts/create" class="navbar-item">Create Post</a>
+      <a href="/" class="navbar-item">Posts</a>
+      <a href="/post/create" class="navbar-item">Create Post</a>
     </nav>
+    {% if user.is_authenticated %}
+      <a href="/logout" class="navbar-item">Olá, {{ user.username }}</a>
+    {% else %}
+      <a href="/login" class="navbar-item">Login</a>
+    {% endif %}
   </header>
   <main class="main-container">
     {% block content %}
