--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -7,7 +7,7 @@
 
 {% block content %}
   <section class="posts-container">
-    {% for post in posts %}
+    {% for post in page_obj %}
       <div class="post-container">
         <h2 class="post-title">{{ post.title }}</h2>
         <p class="post-description">{{ post.description }}</p>
@@ -18,4 +18,12 @@
       </div>
     {% endfor %}
   </section>
+  <div class="pagination-container">
+    {% if page_obj.has_previous %}
+      <a href="?page={{ page_obj.previous_page_number }}">Previous</a>
+    {% endif %}
+    {% if page_obj.has_next %}
+      <a href="?page={{ page_obj.next_page_number }}">Next</a>
+    {% endif %}
+  </div>
 {% endblock %}
