--- a/posts/templates/posts/post.html
+++ b/posts/templates/posts/post.html
@@ -9,9 +9,14 @@
   <section class="post-container">
     <h1 class="post-title">{{ post.title }}</h1>
     <p class="post-description">{{ post.description }}</p>
-    <p class="post-content">{{ post.content }}</p> 
-    <div class="actions-container">
-      <a href="{% url 'post-edit' post.id %}" class="edit">Edit</a>
+    <div class="post">
+      <img src="../media/{{ post.image }}" alt="Post cover image" class="post-image">
+      <div class="post-info">
+        <p class="post-content">{{ post.content }}</p> 
+        <div class="actions-container">
+          <a href="{% url 'post-edit' post.id %}" class="edit">Edit</a>
+        </div>
+      </div>
     </div>
   </section>
 {% endblock %}
