--- a/static/css/form.module.css
+++ b/static/css/form.module.css
@@ -1,9 +1,41 @@
 .form-container {
+  width: 100%;
   margin: 2rem 0;
+  display: flex;
+  justify-content: flex-start;
+  gap: 1.25rem;
+}
+
+.image-field {
+  position: relative;
+  height: 500px;
+  aspect-ratio: 3 / 4;
+}
+
+.image-field input {
+  cursor: pointer;
+  position: relative;
+  height: 500px;
+  aspect-ratio: 3 / 4;
+  z-index: 1;
+  opacity: 0;
+}
+
+.image-field img {
+  position: absolute;
+  height: 500px;
+  aspect-ratio: 3 / 4;
+  inset: 0;
+  object-fit: cover;
+  z-index: 0;
+}
+
+.form-fields {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  gap: 1.25rem;
+  gap: 1rem;
+  flex: 2;
 }
 
 .form-field {
