--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-  <form method="POST" class="form-container">
+  <form method="POST" class="form-container column">
     {% csrf_token %}
     <div class="form-field">
       <label for="username" class="form-label">Username</label>
