--- a/static/css/base.module.css
+++ b/static/css/base.module.css
@@ -6,7 +6,7 @@ body {
   background-color: #06F;
   width: 100%;
   height: 150px;
-  padding: 2rem;
+  padding: 2rem 6rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
