--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -14,6 +14,26 @@
       placeholder="Title"
       value="{{ search_title }}"
     />
+    <select name="search-author" class="input-container">
+      <option value="">Author</option>
+      {% for usuario in users %}
+        {% if usuario.username == search_author %}
+          <option
+            value="{{ usuario.username }}"
+            selected="true"
+          >
+            {{ usuario.username }}
+          </option>
+        {% endif %}
+        {% if usuario.username != search_author %}
+          <option
+            value="{{ usuario.username }}"
+          >
+            {{ usuario.username }}
+          </option>
+        {% endif %}
+      {% endfor %}
+    </select>
     <button type="submit" class="form-button">Search</button>
   </form>
   <section class="posts-container">
@@ -33,14 +53,14 @@
   <div class="pagination-container">
     {% if page_obj.has_previous %}
       <a
-        href="?search-title={{ search_title }}&page={{ page_obj.previous_page_number }}"
+        href="?search-author={{ search_author }}&search-title={{ search_title }}&page={{ page_obj.previous_page_number }}"
       >
         Previous
       </a>
     {% endif %}
     {% if page_obj.has_next %}
       <a
-        href="?search-title={{ search_title }}&page={{ page_obj.next_page_number }}"
+        href="?search-author={{ search_author }}&search-title={{ search_title }}&page={{ page_obj.next_page_number }}"
       >
         Next
       </a>
