--- a/static/css/form.module.css
+++ b/static/css/form.module.css
@@ -1,6 +1,6 @@
 .form-container {
+  margin: auto;
   width: 100%;
-  margin: 2rem 0;
   display: flex;
   justify-content: flex-start;
   gap: 1.25rem;
@@ -8,6 +8,7 @@
 
 .column {
   flex-direction: column;
+  max-width: 400px;
 }
 
 .image-field {
