style: Improving static assets folder structure

--- a/posts/templates/posts/confirm_delete.html
+++ b/posts/templates/posts/confirm_delete.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head %}
-  <link rel="stylesheet" href="{% static 'css/confirm-delete.module.css' %}">
+  <link rel="stylesheet" href="{% static 'posts/css/confirm-delete.module.css' %}">
 {% endblock %}
 
 {% block content %}
