--- a/posts/templates/posts/form.html
+++ b/posts/templates/posts/form.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head %}
-  <link rel="stylesheet" href="{% static 'css/form.module.css' %}">
+  <link rel="stylesheet" href="{% static 'posts/css/form.module.css' %}">
   <script src="{% static 'js/form.js' %}" defer></script>
 {% endblock %}
 
