--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head %}
-  <link rel="stylesheet" href="{% static 'css/posts.module.css' %}">
+  <link rel="stylesheet" href="{% static 'posts/css/posts.module.css' %}">
 {% endblock %}
 
 {% block content %}
