--- a/posts/templates/posts/post.html
+++ b/posts/templates/posts/post.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head %}
-  <link rel="stylesheet" href="{% static 'css/post.module.css' %}">
+  <link rel="stylesheet" href="{% static 'posts/css/post.module.css' %}">
 {% endblock %}
 
 {% block content %}
