--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head %}
-  <link rel="stylesheet" href="{% static 'css/form.module.css' %}">
+  <link rel="stylesheet" href="{% static 'user/css/form.module.css' %}">
 {% endblock %}
 
 {% block content %}
